--- a/style.css
+++ b/style.css
@@ -1,13 +1,127 @@
-body {
-  color: rgba(84, 84, 81, 0.232);
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+ body {
+  width: 100%;
+  height: 100vh;
+  padding: 30px;
+  background-color: rgba(163, 163, 163, 0.308);
+ }
+
+ header {
+  align-items: center;
+  text-align: center;
+ }
+ 
+
+ .container{
+  position: relative;
+  background-color: rgb(71, 71, 71);
+  width: 100%;
+  height: 450px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  padding: 120px;
+  border: 2px solid;
+  border-radius: 15px;
+ }
+
+
+
+
+ .divMeio{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border: 2px solid;
+  padding: 8px 35px;
+  border-radius: 20px;
+ }
+
+ .divEsquerda{
+  border: 2px solid;
+  padding: 8px 35px;
+  border-radius: 20px;
+ }
+
+ .divDireita{
+  border: 2px solid;
+  padding: 8px 35px;
+  border-radius: 20px;
+ }
+
+ input{
+  margin-top: 10px;
+  width: 100%;
+  height: 30px;
+ }
+
+ .botao{
+  margin-top: 10px;
+  width: 100%;
+  height: 30px;
+ }
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ /* body {
+  height: 100%;
+  margin: 0;
+  background-color: rgba(127, 128, 128, 0.831);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  
+}
+
+
+div{
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  padding: 120px;
+  border: 2px solid;
+  
+}
+
+
+
 
 .botao {
   margin: 30px;
   padding: 10px;
-}
-
-
-.divPai{
-  color: red;
-}
+  justify-content: flex-start;
+} */
