--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100vh;
   padding: 30px;
-  background-color: rgba(163, 163, 163, 0.308);
+  background-color: rgba(226, 223, 223, 0.308);
  }
 
  header {
@@ -18,7 +18,7 @@
 
  .container{
   position: relative;
-  background-color: rgb(71, 71, 71);
+  background-color: rgb(129, 129, 129);
   width: 100%;
   height: 450px;
   display: flex;
@@ -27,7 +27,7 @@
   align-items: center;
   margin-top: 20px;
   padding: 120px;
-  border: 2px solid;
+  border: 2px;
   border-radius: 15px;
  }
 
@@ -62,12 +62,14 @@
   margin-top: 10px;
   width: 100%;
   height: 30px;
+  border-radius: 5px;
  }
 
  .botao{
   margin-top: 10px;
   width: 100%;
   height: 30px;
+  border-radius: 10px;
  }
 
  
@@ -75,6 +77,23 @@
  
  
  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  
  
  
