--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
  .container{
   position: relative;
-  background-color: rgb(129, 129, 129);
+  background-color: rgb(180, 180, 180);
   width: 100%;
   height: 450px;
   display: flex;
@@ -72,9 +72,43 @@
   border-radius: 10px;
  }
 
+ .carroCadastrado{
+  background-color: rgb(62, 62, 62);
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  padding: 3px;
+  color: white;
+ }
+
+ .carroAlugado{
+  background-color: rgb(62, 62, 62);
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  padding: 3px;
+  color: white;
+ }
+
+ .botaoAlugar{
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+ }
  
  
- 
+ .botaoExcluir{
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+ }
+
+
+ .botaoRecadastrar{
+  border-radius: 5px;
+  padding: 5px;
+  border: none;
+ }
  
  
 
